* fix bottom bar for message input has wrong background (not input field, but around the area)

--- a/dark-theme.css
+++ b/dark-theme.css
@@ -9591,8 +9591,8 @@ ts-thread {
   background-color: var(--main-dark-highlight) !important;
 }
 
-footer.p-workspace__primary_view_footer {
-  background-color: var(--main-bg-color);
+.workspace__primary_view_footer {
+  background-color: var(--main-bg-color) !important;
 }
 
 .p-unreads_view__header {
